# SquareWars

./: .gitignore  LICENSE  README.md  pygbag_build.py  pyinstaller_build.py  pyproject.toml  run.py
SquareWars-Linux/: SquareWars
SquareWars-Linux/_internal/: libexpat.so.1  libgcc_s.so.1  libglib-2.0.so.0  libgthread-2.0.so.0  libjitterentropy.so.3  liblzma.so.5.6.3  libpcre2-8.so.0  libssl.so.3.2.3  libstdc++.so.6
res/images/: menu.ase
src/: main.py
src/res/concept/: square-wars-concept-initial.ase
src/square_wars/: __init__.py  animation.py  assets.py  chunky.py  command.py  common.py  easings.py  event_types.py  level.py  main.py  particles.py  pixelfont.py  proto.py  scoreboard.py  settings.py  sprite_sheet.py  timer.py  ui.py  utils.py
src/square_wars/states/: __init__.py  gameplay.py  main_menu.py  transition.py
